Web page UI formating improvments

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,6 +1,24 @@
-<form action = "/cgi-bin2/main.py" method = "post" target = "_blank">
-    <textarea name = "textcontent"
-     placeholder="Add Tidal Links here" style="display: block;  width: 600px; height: 600px; margin: 0px; padding: 0px; float: left;"></textarea>
-    <input type = "submit" value = "Submit" />
 
+<html>
+<head>
+<style>
+h1 {text-align: center;}
+h2 {text-align: center;}
+p {text-align: center;}
+</style>
+</head>
+
+
+
+<h1 style="font-size:5vw">Welcome to Tidal-Dl</h1>
+<h2> Tidal-Dl for Web!</h2>
+<p>Insert your links, one link per line below</p>
+<form action = "/cgi-bin2/main.py" method = "post" target = "_blank" style="text-align:center">
+    <textarea name = "textcontent"
+     placeholder="Add Tidal Links here" style="display: block;  width: 600px; height: 400px; margin-left: auto; margin-right: auto; padding: 0px;"></textarea>
+    <input type = "submit" value = "Submit" style="width: 200px; height: 50px;"/>
 </form>
+<!-- style="display: block;  width: 600px; height: 600px; margin: 0px; padding: 0px; float: left;" -->
+</html>
+
+
